[Chromium] Chromium's LayoutTestController is missing setBackingScaleFactor https://bugs.webkit.org/show_bug.cgi?id=83635

Patch by Terry Anderson <tdanderson@chromium.org> on 2012-06-28
Reviewed by Adam Barth.

Added InvokeCallbackTask, a new derived class of MethodTask. When
setBackingScaleFactor is called, a call to setDeviceScaleFactor in
WebView is made and then postTask is used to invoke the callback
function specified in testRunner.setBackingScaleFactor.

* DumpRenderTree/chromium/LayoutTestController.cpp:
(LayoutTestController::LayoutTestController):
(InvokeCallbackTask):
(InvokeCallbackTask::InvokeCallbackTask):
(InvokeCallbackTask::runIfValid):
(LayoutTestController::setBackingScaleFactor):
* DumpRenderTree/chromium/LayoutTestController.h:
(LayoutTestController):

Canonical link: https://commits.webkit.org/108020@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121453 268f45cc-cd09-0410-ab3c-d52691b4dbfc